<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Dollar &#36;cholar</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="colleges">Colleges</string>
    <string name="majors">majors</string>
    <string name="jobs">Jobs</string>
    <string name="city_state"><xliff:g id="city">%1s</xliff:g>, <xliff:g id="state">%2s</xliff:g></string>
    <string name="tuition_cardview">Tuition: $<xliff:g id="tuition">%d</xliff:g></string>
    <string name="earnings_cardview">Earnings: $<xliff:g id="earnings">%d</xliff:g></string>
    <string name="public_">Public</string>
    <string name="private_">Private</string>
    <string name="graduation_rate_cardview">Graduation Rate: <xliff:g id="gradRate">%f</xliff:g></string>
    <string name="college_id_key" translatable="false">collegeId</string>
    <string name="undergrads">Undergraduates: <xliff:g id="students">%d</xliff:g></string>
    <string name="state">State</string>
    <string name="star">Star</string>
    <string name="favorites">Favorites</string>
    <string name="fourYears">4 years</string>
    <string name="fourToSixYears">4–6 years</string>
    <string name="didNotGraduate">Did not Graduate</string>
    <string name="tuition_and_fees">Tuition &amp; Fees ($)</string>
    <string name="in_state">In-State</string>
    <string name="out_of_state">Out-of-State</string>
    <string name="federal_aid_and_loans">Federal Aid &amp; Loans</string>
    <string name="loan">Loan</string>
    <string name="grant">Grant</string>
    <string name="student_body">Student Body</string>
    <string name="share_of_student_body_receiving">Share of Students Receiving:</string>
    <string name="grant_vs_loan">A Federal Grant, unlike a loan, does not have to be repaid.</string>
    <string name="federal_student_aid_website">Federal Student Aid Website</string>
    <string name="family_income">Family Income ($)</string>
    <string name="loan_principal">Loan Principal ($)</string>
    <string name="median_entering_repayment">Median ($) upon Entering Repayment</string>
    <string name="monthly_payments">Monthly Payments ($)</string>
    <string name="ten_year_amort">10-year Amortization Plan</string>
    <string name="median_for_grads">Median for Graduates</string>
    <string name="cum_debt">Cumulative Debt</string>
    <string name="size">Size</string>
    <string name="graduation">Graduation</string>
    <string name="tuition_plus_fees">Tuition and Fees</string>
    <string name="highest_med_salary">Ranking by Highest Median Salary 10 yrs after entering</string>


    <!-- Fragment tab page title -->

    <string name="earnings">Earnings</string>
    <string name="cost">Cost</string>
    <string name="debt">Debt</string>
    <string name="completion">Completion</string>
    <string name="admission">Admission</string>
    <string name="photos">Photos</string>
    <string name="photo_of_campus">Photo of Campus</string>
    <string name="median_earnings">Median Earnings ($)</string>
    <string name="years_after_entry">Years After Entering</string>
    <string name="median">Median</string>
    <string name="middle_50">Salary for Middle 50%</string>
    <string name="cost_by_family_income">Average Cost by Family Income</string>
    <string name="completers_noncompleters">Completers vs Non-Completers</string>
    <string name="median_debt">Median Debt</string>
    <string name="entering_repayment">Upon Entering Repayment</string>
    <string name="completers">Completers</string>
    <string name="noncompleters">Non-Completers</string>
    <string name="overall">Overall</string>
    <string name="salary">Salary</string>
    <string name="ten_yrs_after_enters">10 yrs after entering</string>
    <string name="all">All</string>
    <string name="loading">Loading…</string>
    <string name="percentiles">25th, Median, and 75th Percentiles</string>
<string name="six_eight_ten">6, 8, and 10yrs after entering</string>

    <string name="finance">Finance</string>
    <string name="admissions">Admissions</string>
    <string name="graduation_rates">Graduation Rates</string>
    <string name="four_year_grad_rate">Four-year: <xliff:g id="grad_rate">%f</xliff:g></string>
    <string name="six_year_grad_rate">Six-year: <xliff:g id="grad_rate">%f</xliff:g></string>
    <string name="act">ACT: <xliff:g id="score">%d</xliff:g></string>
    <string name="sat">SAT: <xliff:g id="score">%d</xliff:g></string>
    <string name="loan_principal_entering_repayment">Loan principal upon entering repayment: $<xliff:g id="debt">%d</xliff:g></string>
    <string name="mp">Median loan debt of completers in monthly payments (10-year amortization plan): $<xliff:g id="payment">%d</xliff:g></string>
    <string name="logo">School logo</string>
    <string name="favorites_button">Add to favorites button</string>
    <string name="no_info">No college info available</string>
    <string name="cost_calculator">Cost Calculator</string>

    <string name="four_years">4 years</string>
    <string name="six_years">6 years</string>

    <string name="ten_yrs">10 yrs</string>
    <string name="eight_yrs">8 yrs</string>
    <string name="six_yrs">6 yrs</string>

    <string name="average_net_cost">Cost ($)</string>
    <string name="percentile">Percentile</string>

    <string name="thousand">Thousand</string>
    <string name="act_middle_50">ACT Middle 50 Percentile</string>

    <string name="max_score">Max score</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="campus_photo">Campus photo</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="no_favorites">No Favorites Added</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="logo_transition" translatable="false">TN_LOGO</string>

    <string name="price_calculator">Price Calculator</string>
</resources>
