<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginBottom="16dp"
    android:layout_marginEnd="16dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_finance_cv">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/detail_finance_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/median_earnings"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"/>

        <include layout="@layout/include_circle_thousands"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/six_yrs"
                android:gravity="center"
                android:layout_gravity="center"
                android:padding="@dimen/thousand_margin"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="@dimen/thousand_margin"
                android:text="@string/eight_yrs"
                android:gravity="center"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="@dimen/thousand_margin"
                android:text="@string/ten_yrs"
                android:gravity="center"
                android:layout_gravity="center"/>


        </LinearLayout>
        <TextView
            android:id="@+id/detail_earnings_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/years_after_completion"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="12sp"
            android:layout_gravity="center_horizontal"/>


    </LinearLayout>

</android.support.v7.widget.CardView>