<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/cardview">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/cardview_inner_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:text="@string/loan_principal"
            android:gravity="center"
            android:layout_marginBottom="4dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/median_debt"
            android:gravity="center"
            android:textStyle="italic"
            android:layout_marginBottom="@dimen/cardview_inner_margin"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/debt_principal_tv"
                    style="@style/circle_style" />
                <TextView style="@style/thousand_style" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/cardview_inner_margin"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:text="@string/overall"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/debt_completers_tv"
                    style="@style/circle_style" />

                <TextView style="@style/thousand_style" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/cardview_inner_margin"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:text="@string/completers"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/debt_noncompleters_tv"
                    style="@style/circle_style" />

                <TextView style="@style/thousand_style" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/cardview_inner_margin"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:text="@string/noncompleters"/>
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


</android.support.v7.widget.CardView>