<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/app_bar_bottom_height"
    android:layout_gravity="bottom"
    android:background="@color/white"
    android:baselineAligned="false"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="horizontal"
        android:padding="4dp">

        <ImageView
            android:id="@+id/detail_logo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/ic_school_black_24dp"
            android:padding="4dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="top"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detail_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@android:color/black"
                tools:text="University of Michigan"
                android:padding="4dp"
                android:layout_marginStart="4dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/detail_city_state"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="@android:color/black"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    tools:text="Ann Arbor, MI"
                    android:textStyle="italic"

                    android:paddingStart="4dp"
                    android:paddingEnd="8dp"
                    android:layout_marginStart="4dp"
                   />

                <TextView
                    android:id="@+id/detail_ownership"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@android:color/black"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    tools:text="Public"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/size"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/admission"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/graduation"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/circle_style"
                android:gravity="center"
                android:id="@+id/detail_size_tv"
                android:backgroundTint="@android:color/black"/>

            <TextView
                style="@style/thousand_style"
                android:gravity="center"
                android:textColor="@android:color/black"/>

        </LinearLayout>

        <com.github.mikephil.charting.charts.PieChart
            android:layout_width="0dp"
            android:layout_height="@dimen/piechart_height"
            android:layout_weight="1"
            android:id="@+id/detail_admission_pieChart" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.github.mikephil.charting.charts.PieChart
                android:layout_width="match_parent"
                android:layout_height="@dimen/piechart_height"
                android:id="@+id/detail_grad_piechart"/>

            <TextView
                android:id="@+id/detail_grad4yrs_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                tools:text="4 years: 76%"
                android:gravity="center_horizontal|top"
                android:textSize="12sp"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>